--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@unform/core": "^2.1.6",
+    "@unform/mobile": "^2.1.6",
     "react": "17.0.1",
     "react-native": "0.64.0"
   },
