--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-firebase/app": "^11.1.1",
+    "@react-native-firebase/app": "^11.2.0",
     "@react-native-firebase/auth": "^11.2.0",
+    "@react-native-firebase/database": "^11.2.0",
+    "@react-native-firebase/firestore": "^11.2.0",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
@@ -29,6 +31,8 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.1.1",
+    "react-native-webrtc": "^1.89.1",
     "react-navigation-material-bottom-tabs": "^2.3.4"
   },
   "devDependencies": {
