--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/auth": "^11.2.0",
     "@react-native-firebase/database": "^11.2.0",
     "@react-native-firebase/firestore": "^11.2.0",
+    "@react-native-picker/picker": "^1.15.0",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
@@ -27,6 +28,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-modal": "^11.7.0",
     "react-native-paper": "^4.7.2",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^2.0.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
