--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -188,6 +188,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.7.0')
     implementation ('com.google.firebase:firebase-analytics')
 
+    compile project(':react-native-document-picker')
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
