--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/datetimepicker": "^3.4.6",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-firebase/app": "^11.2.0",
-    "@react-native-firebase/auth": "^11.2.0",
-    "@react-native-firebase/database": "^11.2.0",
-    "@react-native-firebase/firestore": "^11.2.0",
+    "@react-native-firebase/app": "^11.3.3",
+    "@react-native-firebase/auth": "^11.3.3",
+    "@react-native-firebase/database": "^11.3.3",
+    "@react-native-firebase/firestore": "^11.3.3",
+    "@react-native-firebase/storage": "^11.3.3",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
@@ -29,13 +30,15 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-modal": "^11.7.0",
     "react-native-paper": "^4.7.2",
+    "react-native-permissions": "^3.0.3",
     "react-native-reanimated": "^2.0.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
     "react-native-webrtc": "^1.89.1",
-    "react-navigation-material-bottom-tabs": "^2.3.4"
+    "react-navigation-material-bottom-tabs": "^2.3.4",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
