--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -30,3 +30,9 @@ FLIPPER_VERSION=0.75.1
 # This one fixes a weird WebRTC runtime problem on some devices.
 # https://github.com/jitsi/jitsi-meet/issues/7911#issuecomment-714323255
 android.enableDexingArtifactTransform.desugaring=false
+
+MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
+  MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+  MYAPP_RELEASE_STORE_PASSWORD=123456
+  MYAPP_RELEASE_KEY_PASSWORD=123456
+
