--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -36,3 +36,8 @@ MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
   MYAPP_RELEASE_STORE_PASSWORD=123456
   MYAPP_RELEASE_KEY_PASSWORD=123456
 
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=4096m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+
